--- a/requirements.txt
+++ b/requirements.txt
@@ -1,150 +1,6 @@
-﻿absl-py==2.1.0
-altair==5.3.0
-annotated-types==0.7.0
-asttokens==2.4.1
-astunparse==1.6.3
-attrs==23.2.0
-bleach==6.1.0
-blinker==1.7.0
-cachetools==5.3.3
-certifi==2024.2.2
-cffi==1.17.1
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.2.1
-cycler==0.12.1
-debugpy==1.8.2
-decorator==5.1.1
-executing==2.0.1
-filelock==3.13.4
-Flask==3.0.3
+flask==3.0.3
 flask-cors==6.0.1
-flatbuffers==24.3.25
-fonttools==4.51.0
-fsspec==2024.3.1
-gast==0.5.4
-gitdb==4.0.11
-GitPython==3.1.43
-google-ai-generativelanguage==0.6.15
-google-api-core==2.25.1
-google-api-python-client==2.173.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-generativeai==0.8.5
-google-pasta==0.2.0
-googleapis-common-protos==1.70.0
-grpcio==1.73.0
-grpcio-status==1.71.0
-gunicorn==23.0.0
-h5py==3.11.0
-httplib2==0.22.0
-huggingface-hub==0.22.2
-idna==3.7
-ipykernel==6.29.4
-ipython==8.25.0
-itsdangerous==2.2.0
-jax==0.4.35
-jaxlib==0.4.35
-jedi==0.19.1
-Jinja2==3.1.3
-joblib==1.4.2
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-kaggle==1.6.17
-keras==3.3.3
-kiwisolver==1.4.5
-langdetect==1.0.9
-libclang==18.1.1
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.4
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-ml_dtypes==0.5.0
-mpmath==1.3.0
-namex==0.0.8
-nest-asyncio==1.6.0
-networkx==3.5
-nltk==3.9.1
-numpy==1.26.3
-opencv-contrib-python==4.10.0.84
-opencv-python==4.9.0.80
-opt-einsum==3.3.0
-optree==0.11.0
-packaging==24.0
-pandas==2.2.2
-parso==0.8.4
-pillow==10.3.0
-platformdirs==4.2.2
-prompt_toolkit==3.0.47
-proto-plus==1.26.1
-protobuf==5.29.5
-psutil==6.0.0
-pure-eval==0.2.2
-pyarrow==16.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==2.11.7
-pydantic_core==2.33.2
-pydeck==0.8.1b0
-Pygments==2.17.2
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-python-slugify==8.0.4
-pytz==2024.1
-pywin32==306
-PyYAML==6.0.1
-pyzmq==26.0.3
-referencing==0.35.0
-regex==2024.4.16
-requests==2.31.0
-rich==13.7.1
-rpds-py==0.18.0
-rsa==4.9.1
-safetensors==0.4.3
-scikit-learn==1.5.0
-scipy==1.14.0
-seaborn==0.13.2
-sentencepiece==0.2.0
-setuptools==69.5.1
-six==1.16.0
-smmap==5.0.1
-sounddevice==0.5.1
-stack-data==0.6.3
-streamlit==1.33.0
-sympy==1.14.0
-tenacity==8.2.3
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.16.1
-tensorflow-intel==2.16.1
-termcolor==2.4.0
-text-unidecode==1.3
-tf_keras==2.16.0
-threadpoolctl==3.5.0
-tokenizers==0.19.1
-toml==0.10.2
-toolz==0.12.1
-torch==2.7.1
-tornado==6.4
-tqdm==4.66.2
-traitlets==5.14.3
 transformers==4.40.0
-typing-inspection==0.4.1
-typing_extensions==4.14.0
-tzdata==2024.1
-uritemplate==4.2.0
-urllib3==2.2.1
-watchdog==4.0.0
-wcwidth==0.2.13
-webencodings==0.5.1
-Werkzeug==3.0.2
-wheel==0.43.0
-wrapt==1.16.0
-youtube-transcript-api==0.6.2
+torch==2.2.2
+google-generativeai==0.8.5
+gunicorn==23.0.0
